--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -22,6 +22,7 @@
             </div>
             <div>
                 {{if .AuthenticatedUser}}
+                    <a href='/user/profile'>Profile</a>
                     <form action='/user/logout' method='POST'>
                         <button>Logout</button>
                     </form>
